# fps_game

./: Cargo.toml  level.txt
assets/: zenk_rzmk-357.glb
src/: assets.rs  enemy.rs  extra.rs  main.rs  player.rs
