[package]
name = "fps"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.23.0", features = ["3d"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", rev = "4e221566cad71419e907fb90da2dde109fbcf9f2" }
bevy_fps_controller = "0.16.0"
bevy_rapier3d = { version = "0.30.0", features = ["debug-render-3d"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
